<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".UserDataActivity">

    <TextView
        android:id="@+id/labell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Podaj swoje dane"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/idLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/userID"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/userID"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/genderLabel"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/gender" />

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/age"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textShortMessage|number|textPersonName|text" />

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/isParkinson"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/parkinsonL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/yesNo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Dominująca ręka"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/dominantHand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/hand" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Test przeprowadzany będzie:"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/measuredHand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/hand" />

    <TextView
        android:id="@+id/additionalInfoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/additionalInfo"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/additionalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/additionalInfo"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/startMeasure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="startFingerTapping"
        android:text="Zacznij pomiar" />

    <TextView
        android:id="@+id/alertLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#F10000"
        android:textSize="18sp" />
</LinearLayout>